@@ -14,6 +14,8 @@ Summary of important user-visible changes for statistics 1.4.3:
 
  ** cophenet           (patch #10040)
  
+ ** datasample         (patch #10050)
+ 
  ** evalclusters
  
  ** gscatter           (patch #10043)
